--- a/_includes/post.html
+++ b/_includes/post.html
@@ -73,7 +73,7 @@
 
 		<div>
       <section class="share col-sm-6">
-        <h4 class="section-title">Share Post</h4>
+        <h4 class="section-title">想把本文分享给你的朋友？</h4>
         <a class="btn btn-default btn-sm twitter" href="http://twitter.com/share?text={{page.title | encode}}{% if site.author.twitter%}&via={{site.author.twitter}}{% endif %}"
            onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
           <i class="fa fa-twitter fa-lg"></i>
@@ -104,12 +104,12 @@
 		  {% if page.previous %}
 		  <li class="previous"><a href="{{ site.BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
 		  {% else %}
-		  <li class="previous disabled"><a>&larr; Previous</a></li>
+		  <li class="previous disabled"><a>&larr; 上一篇文章</a></li>
 		  {% endif %}
 		  {% if page.next %}
 		  <li class="next"><a href="{{ site.BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
 		  {% else %}
-			<li class="next disabled"><a>Next &rarr;</a>
+			<li class="next disabled"><a>下一篇文章 &rarr;</a>
 		  {% endif %}
 		</ul>
 
