--- a/_includes/default.html
+++ b/_includes/default.html
@@ -59,7 +59,7 @@
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-				<img src="{{site.author.icon}}" class="img-circle" />
+				<img src="{{site.author.icon}}" style="height:35px;" class="img-circle" />
 				{{ site.title }}
 			</a>
 		</div>
