--- a/_includes/default.html
+++ b/_includes/default.html
@@ -98,7 +98,9 @@
 		<footer>
 			<hr/>
 			<p>
-				&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} 的博客自豪地采用了 <a href="http://jekyllrb.com/">Jekyll</a>。使用了由 dbtek 开发的主题 <a href="https://github.com/dbtek/dbyll">dbyll</a>。
+				&copy; {{ site.time | date: '%Y' }} 本博客自豪地采用了 <a href="http://jekyllrb.com/">Jekyll</a>。同时基于 dbtek 的主题 <a href="https://github.com/dbtek/dbyll">dbyll</a> 进行了二次开发。
+				<br/>
+				署名-非商业性使用-相同方式共享 4.0 国际
 			</p>
 		</footer>
 	</div>
