--- a/_includes/default.html
+++ b/_includes/default.html
@@ -31,6 +31,10 @@
 	-->
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
+
+	{% unless page.no_latex %}
+        {% include latex.html %}
+    {% endunless %}
 </head>
 
 <body>
