--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@ a {
     transition: background 0.15s,
             border .15s;
     padding: 3px;
+    border-radius: 5px;
 }
 a:link {
     text-decoration: none;
@@ -14,10 +15,27 @@ a:visited {
 a:hover {
     text-decoration: none;
     background: rgba(0, 0, 0, .1);
-    border-radius: 5px;
 }
 a:active {
     text-decoration: none;
+}
+
+table {
+    width: 400px;
+    margin: 0 auto;
+    border: 1px solid #000000;
+    border-collapse: collapse;
+}
+th,
+td {
+    border: 1px solid #000000;
+}
+tr {
+    transition: background .15s;
+}
+tr:hover {
+    
+    background: rgba(0, 0, 0, .1);
 }
 
 body{
