--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,72 @@
 @import url(//fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 
 a {
-    transition: background 0.15s,
-            border .15s;
-    padding: 3px;
-    border-radius: 5px;
-}
-a:link {
-    text-decoration: none;
-}
-a:visited {
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: none;
-    background: rgba(0, 0, 0, .1);
-}
-a:active {
-    text-decoration: none;
+	transition: background 0.15s,
+		border .15s;
+	padding: 3px;
+	border-radius: 5px;
 }
 
+a:link {
+	text-decoration: none;
+}
+
+a:visited {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: none;
+	background: rgba(0, 0, 0, .1);
+}
+
+a:active {
+	text-decoration: none;
+}
+
+
 table {
-    width: 400px;
-    margin: 0 auto;
-    border: 1px solid #000000;
-    border-collapse: collapse;
+	border-collapse: collapse;
+	border-spacing: 0;
+	font-size: 0.875em;
+	margin: 0 0 20px 0;
+	width: 100%;
 }
 th,
 td {
-    border: 1px solid #000000;
+	font-weight: normal;
+	padding: 8px;
+	vertical-align: middle;
+}
+th,
+td {
+	border: 1px solid #ddd;
+	border-bottom: 3px solid #ddd;
+}
+th {
+	font-weight: 700;
+	padding-bottom: 10px;
+}
+td {
+	border-bottom-width: 1px;
 }
 tr {
-    transition: background .15s;
+	transition: background .15s;
 }
 tr:hover {
-    
-    background: rgba(0, 0, 0, .1);
+	background: rgba(0, 0, 0, .1);
 }
 
-body{
+img {
+    transition: opacity .15s;
+    border: 1px dashed #dfdede;
+    opacity: 0.9;
+}
+img:hover {
+    opacity: 1;
+}
+
+body {
 	color: #2c3e50;
 }
 
@@ -54,12 +82,12 @@ body{
 	text-align: center;
 	margin-bottom: 10px;
 }
-.sidebar-header .title{
+
+.sidebar-header .title {
 	letter-spacing: 3px;
-	text-transform: uppercase;
 }
 
-.sidebar-header .title a{
+.sidebar-header .title a {
 	text-decoration: none;
 	color: #fff;
 }
@@ -69,13 +97,17 @@ a.nav-link {
 	padding-top: 7px;
 	color: #aaa;
 }
-a.nav-link i{
+
+a.nav-link i {
 	font-size: 16px;
 }
-a.nav-link:hover { color: #777; }
+
+a.nav-link:hover {
+	color: #777;
+}
 
 #bio {
-	font-family: "Courier New", Courier, monospace;
+	font-family: 'Ubuntu', sans-serif;
 	font-size: 11px;
 	margin: 0 auto;
 	margin-bottom: 10px;
@@ -83,33 +115,40 @@ a.nav-link:hover { color: #777; }
 
 #contact-list li .fa,
 article .share .btn {
-	-o-transition:color .2s ease-out, background 1s ease-in;
-  -ms-transition:color .2s ease-out, background 1s ease-in;
-  -moz-transition:color .2s ease-out, background 1s ease-in;
-  -webkit-transition:color .2s ease-out, background 1s ease-in;
-  transition:color .2s ease-out, background 1s ease-in;
+	-o-transition: color .2s ease-out, background 1s ease-in;
+	-ms-transition: color .2s ease-out, background 1s ease-in;
+	-moz-transition: color .2s ease-out, background 1s ease-in;
+	-webkit-transition: color .2s ease-out, background 1s ease-in;
+	transition: color .2s ease-out, background 1s ease-in;
 }
+
 #contact-list li:hover .fa-twitter,
 article .share .twitter:hover {
 	color: #00ACEE;
 	border-color: #00ACEE;
 }
+
 #contact-list li:hover .fa-linkedin {
 	color: #1D87BD;
 }
+
 #contact-list li:hover .fa-envelope {
 	color: #E93E30;
 }
+
 #contact-list li:hover .fa-pinterest {
 	color: #CC2127;
 }
+
 #contact-list li:hover .fa-rss {
 	color: #e74c3c;
 }
+
 article .share .facebook:hover {
 	color: #43609C;
 	border-color: #43609C;
 }
+
 article .share .gplus:hover {
 	color: #C13929;
 	border-color: #C13929;
@@ -125,22 +164,21 @@ article .share .gplus:hover {
 }
 
 @media only screen and (min-width: 768px) {
-    .page-header{
-        margin-right: 70px;
-    }
+	.page-header {
+		margin-right: 70px;
+	}
 }
 
-article{
+article {
 	margin-bottom: 40px;
 }
 
-.article_body{
+.article_body {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
 
 .post-date {
-	text-transform: uppercase;
 	font-size: 14px;
 	letter-spacing: 3px;
 }
@@ -149,11 +187,30 @@ article {
 	padding: 0 5% 0;
 }
 
-article.home div a, article.home pre a { color: #2c3e50; }
-article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; }
-article img { max-width: 100%; }
+article.home div a,
+article.home pre a {
+	color: #2c3e50;
+}
 
-h1,h2,h3,h4,h5,h6 { font-family: 'Ubuntu', sans-serif; }
+article.home div a:hover,
+article.home pre a:hover {
+	color: #2c3e50;
+	text-decoration: none;
+}
+
+article img {
+	max-width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Ubuntu', sans-serif;
+}
+
 article.home h1,
 article.home h2,
 article.home h3,
@@ -170,6 +227,7 @@ article.home h3 a,
 article.home h4 a {
 	color: #f2756a;
 }
+
 article.home h1 a:hover,
 article.home h2 a:hover,
 article.home h3 a:hover,
@@ -178,8 +236,8 @@ article.home h4 a:hover {
 }
 
 .author .author-image {
-  float: left;
-  margin-right: 20px;
+	float: left;
+	margin-right: 20px;
 }
 
 footer {
@@ -189,41 +247,45 @@ footer {
 
 /* nav-vertical-tabs component */
 .nav-tabs-vertical {
-    border-right: 1px solid #ddd;
+	border-right: 1px solid #ddd;
 }
 
 .nav-tabs-vertical li {
-    margin-right: -1px;
+	margin-right: -1px;
 }
 
-.nav-tabs-vertical>li.active>a, .nav-tabs-vertical>li.active>a:hover, .nav-tabs-vertical>li.active>a:focus {
-    color: #555;
-    cursor: default;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-right-color: transparent;
+.nav-tabs-vertical>li.active>a,
+.nav-tabs-vertical>li.active>a:hover,
+.nav-tabs-vertical>li.active>a:focus {
+	color: #555;
+	cursor: default;
+	background-color: #fff;
+	border: 1px solid #ddd;
+	border-right-color: transparent;
 }
 
 .nav-tabs-vertical>li>a {
-    line-height: 1.428571429;
-    border: 1px solid transparent;
-    border-radius: 4px 0 0 4px;
+	line-height: 1.428571429;
+	border: 1px solid transparent;
+	border-radius: 4px 0 0 4px;
 }
 
-.badge { background: #F2756A; }
-
-#nav-menu{
-    position: fixed;
-    top: 45px;
-    right: 45px;
-    z-index: 2000;
+.badge {
+	background: #F2756A;
 }
+
+#nav-menu {
+	position: fixed;
+	top: 45px;
+	right: 45px;
+	z-index: 2000;
+}
+
 #nav-menu .dropdown-menu {
-    left: inherit;
-    right: 0px;
+	left: inherit;
+	right: 0px;
 }
 
 ul.dropdown-menu>li>a>i.fa {
-    width: 1.3em;
+	width: 1.3em;
 }
-
