--- a/_includes/page.html
+++ b/_includes/page.html
@@ -1,4 +1,5 @@
 <div class="page-header">
+  {% if page.figure %} <img src="{{ page.figure }}" style="width: 100%;">{{ page.title }}</img>{% endif %}
   <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
 </div>
 
