--- a/_includes/post.html
+++ b/_includes/post.html
@@ -17,7 +17,7 @@
 
 		{% unless page.categories == empty %}
 		<ul class="tag_box list-unstyled list-inline">
-			<li><i class="fa fa-folder-open"></i></li>
+			<li><i class="fa-solid fa-folder-open"></i></li>
 			{% assign categories_list = page.categories %}
 			{% if categories_list.first[0] == null %}
 			{% for category in categories_list %}
@@ -38,7 +38,7 @@
 
 		{% unless page.tags == empty %}
 		<ul class="list-inline">
-			<li><i class="fa fa-tags"></i></li>
+			<li><i class="fa-solid fa-tags"></i></li>
 			{% assign tags_list = page.tags %}
 			{% if tags_list.first[0] == null %}
 			{% for tag in tags_list %}
