--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,43 +19,43 @@
 		{% if site.author.github %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
-				<i class="fa fa-github-alt fa-lg"></i>
+				<i class="fa-brands fa-github-alt"></i>
 			</a>
 		</li>
 		{% endif %}
-		{% if site.author.twitter %}
+		{% if site.author.bilibili %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
-				<i class="fa fa-twitter fa-lg"></i>
+			<a class="btn btn-default btn-sm" href="https://space.bilibili.com/{{ site.author.bilibili }}">
+				<i class="fa-brands fa-bilibili"></i>
 			</a>
 		</li>
 		{% endif %}
 		{% if site.author.email %}
 		<li>
 			<a class="btn btn-default btn-sm" href="mailto:{{ site.author.email }}">
-				<i class="fa fa-envelope fa-lg"></i>
+				<i class="fa-solid fa-envelope"></i>
 			</a>
 		</li>
 		{% endif %}
 	</ul>
 	<ul id="contact-list-secondary" class="list-unstyled list-inline">
-		{% if site.author.pinterest %}
+		{% if site.author.qq %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://pinterest.com/{{ site.author.pinterest }}">
-				<i class="fa fa-pinterest fa-lg"></i>
+			<a class="btn btn-default btn-sm" href="tencent://message/?uin={{ site.author.qq }}&Site=&Menu=yes">
+				<i class="fa-brands fa-qq"></i>
 			</a>
 		</li>
 		{% endif %}
-		{% if site.author.linkedin %}
+		{% if site.author.cnblogs %}
 		<li>
-			<a class="btn btn-default btn-sm" href="https://linkedin.com/in/{{ site.author.linkedin }}">
-				<i class="fa fa-linkedin fa-lg"></i>
+			<a class="btn btn-default btn-sm" href="https://cnblogs.com/{{ site.author.cnblogs }}">
+				<i class="fa-solid fa-blog"></i>
 			</a>
 		</li>
 		{% endif %}
 		<li>
 			<a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
-				<i class="fa fa-rss fa-lg"></i>
+				<i class="fa-solid fa-rss"></i>
 			</a>
 		</li>
 	</ul>
