--- a/_includes/post.html
+++ b/_includes/post.html
@@ -85,6 +85,11 @@
 					<i class="fa fa-google-plus fa-lg"></i>
 					Google+
 				</a>
+				<a class="btn btn-default btn-sm"
+					onclick="window.open('{{ site.BASE_PATH }}/share?url='+window.location.href, '请使用手机版微信扫一扫二维码', 'width=490,height=530');return false;">
+					<i class="fa fa-google-plus fa-lg"></i>
+					微信
+				</a>
 			</section>
 
 			<section class="col-sm-6 author">
