--- a/_includes/post.html
+++ b/_includes/post.html
@@ -69,25 +69,9 @@
 		<div>
 			<section class="share col-sm-6">
 				<h4 class="section-title">想把本文分享给你的朋友？</h4>
-				<a class="btn btn-default btn-sm twitter"
-					href="http://twitter.com/share?text={{page.title | encode}}{% if site.author.twitter%}&via={{site.author.twitter}}{% endif %}"
-					onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-					<i class="fa fa-twitter fa-lg"></i>
-					Twitter
-				</a>
-				<a class="btn btn-default btn-sm facebook" href="https://www.facebook.com/sharer/sharer.php"
-					onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-					<i class="fa fa-facebook fa-lg"></i>
-					Facebook
-				</a>
-				<a class="btn btn-default btn-sm gplus"
-					onclick="window.open('https://plus.google.com/share?url='+window.location.href, 'google-plus-share', 'width=490,height=530');return false;">
-					<i class="fa fa-google-plus fa-lg"></i>
-					Google+
-				</a>
-				<a class="btn btn-default btn-sm"
-					onclick="window.open('{{ site.BASE_PATH }}/share?url='+window.location.href, '请使用手机版微信扫一扫二维码', 'width=490,height=530');return false;">
-					<i class="fa fa-google-plus fa-lg"></i>
+				<a class="btn btn-default btn-sm facebook"
+					onclick="window.open('https://assets.cnblogs.com/qrcode.html?url='+window.location.href, '手机扫码分享', 'width=490,height=530');return false;">
+					<i class="fa-brands fa-weixin"></i>
 					微信
 				</a>
 			</section>
