--- a/_includes/post.html
+++ b/_includes/post.html
@@ -108,3 +108,4 @@
 	</div>
 </article>
 <div class="clearfix"></div>
+<script src="{{ site.BASE_PATH }}/assets/js/toc.js" rel="stylesheet"></script>
