--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,51 @@
 @import url(//fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 
+
+li{list-style-type: square;}
+li a {
+	font-family: 'Ubuntu', sans-serif;
+	color: #f2756a;
+}
+
+li a:hover {
+	color: #e74c3c;
+}
+
+#contact-list + ul {
+    overflow: auto;
+    height: 350px;
+}
+
 ul {
-    padding-left: 3px;
+    padding-left: 15px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  width: 6px;
+  background: rgba(#101F1C, 0.1);
+  -webkit-border-radius: 2em;
+  -moz-border-radius: 2em;
+  border-radius: 2em;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(144,147,153,.5);
+  background-clip: padding-box;
+  min-height: 28px;
+  -webkit-border-radius: 2em;
+  -moz-border-radius: 2em;
+  border-radius: 2em;
+  transition: background-color .3s;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(144,147,153,.3);
 }
 
 a {
@@ -243,22 +287,13 @@ article.home h4 a:hover {
 	color: #e74c3c;
 }
 
+.article_body h1,
 .article_body h2,
 .article_body h3,
 .article_body h4,
 .article_body h5,
-.article_body h1,
 .article_body h6 {
 	font-family: 'Ubuntu', sans-serif;
-	color: #f2756a;
-}
-
-.article_body h1 a,
-.article_body h2 a,
-.article_body h3 a,
-.article_body h4 a,
-.article_body h5 a,
-.article_body h6 a {
 	color: #f2756a;
 }
 
