--- a/_includes/latex.html
+++ b/_includes/latex.html
@@ -9,5 +9,5 @@ MathJax = {
 };
 </script>
 <script type="text/javascript" id="MathJax-script" async
-    src="{{ site.BASE_PATH }}/assets/resources/mathjax/tex-svg.js">
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
 </script>
