--- a/_includes/default.html
+++ b/_includes/default.html
@@ -104,7 +104,7 @@
 			<p>
 				&copy; {{ site.time | date: '%Y' }} 本博客自豪地采用了 <a href="http://jekyllrb.com/">Jekyll</a>。同时基于 dbtek 的主题 <a href="https://github.com/dbtek/dbyll">dbyll</a> 进行了二次开发。
 				<br/>
-				本博客所有文章遵循 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">署名-非商业性使用-相同方式共享 4.0 国际</a> 协议。
+				除特殊说明外，本博客所有文章遵循 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">署名-非商业性使用-相同方式共享 4.0 国际</a> 协议。
 			</p>
 		</footer>
 	</div>
