--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,25 @@
 @import url(//fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
+@import url(//fonts.googleapis.com/css?family=Fira+Code:500&subset=latin,latin-ext);
 
 
-li{list-style-type: square;}
+code {
+    font-family: 'Fira Code';
+}
+
+li {
+    list-style-type: square;
+}
+
 li a {
-	font-family: 'Ubuntu', sans-serif;
-	color: #f2756a;
+    font-family: 'Ubuntu', sans-serif;
+    color: #f2756a;
 }
 
 li a:hover {
-	color: #e74c3c;
+    color: #e74c3c;
 }
 
-#contact-list + ul {
+#contact-list+ul {
     overflow: auto;
     height: 350px;
 }
@@ -21,88 +29,94 @@ ul {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+    width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  width: 6px;
-  background: rgba(#101F1C, 0.1);
-  -webkit-border-radius: 2em;
-  -moz-border-radius: 2em;
-  border-radius: 2em;
+    width: 6px;
+    background: rgba(#101F1C, 0.1);
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius: 2em;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(144,147,153,.5);
-  background-clip: padding-box;
-  min-height: 28px;
-  -webkit-border-radius: 2em;
-  -moz-border-radius: 2em;
-  border-radius: 2em;
-  transition: background-color .3s;
-  cursor: pointer;
+    background-color: rgba(144, 147, 153, .5);
+    background-clip: padding-box;
+    min-height: 28px;
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius: 2em;
+    transition: background-color .3s;
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(144,147,153,.3);
+    background-color: rgba(144, 147, 153, .3);
 }
 
 a {
-	transition: background 0.15s,
-		border .15s;
-	padding: 3px;
-	border-radius: 5px;
+    transition: background 0.15s,
+        border .15s;
+    padding: 3px;
+    border-radius: 5px;
 }
 
 a:link {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 a:visited {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 a:hover {
-	text-decoration: none;
-	background: rgba(0, 0, 0, .1);
+    text-decoration: none;
+    background: rgba(0, 0, 0, .1);
 }
 
 a:active {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
-	font-size: 0.875em;
-	margin: 0 0 20px 0;
-	width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    font-size: 0.875em;
+    margin: 0 0 20px 0;
+    width: 100%;
 }
+
 th,
 td {
-	font-weight: normal;
-	padding: 8px;
-	vertical-align: middle;
+    font-weight: normal;
+    padding: 8px;
+    vertical-align: middle;
 }
+
 th,
 td {
-	border: 1px solid #ddd;
-	border-bottom: 3px solid #ddd;
+    border: 1px solid #ddd;
+    border-bottom: 3px solid #ddd;
 }
+
 th {
-	font-weight: 700;
-	padding-bottom: 10px;
+    font-weight: 700;
+    padding-bottom: 10px;
 }
+
 td {
-	border-bottom-width: 1px;
+    border-bottom-width: 1px;
 }
+
 tr {
-	transition: background .15s;
+    transition: background .15s;
 }
+
 tr:hover {
-	background: rgba(0, 0, 0, .1);
+    background: rgba(0, 0, 0, .1);
 }
 
 img {
@@ -110,6 +124,7 @@ img {
     border: 1px dashed #dfdede;
     opacity: 0.9;
 }
+
 img:hover {
     opacity: 1;
 }
@@ -119,139 +134,139 @@ html {
 }
 
 body {
-	color: #2c3e50;
+    color: #2c3e50;
 }
 
 .sidebar {
-	position: fixed;
-	top: 0px;
-	padding-top: 10%;
-	background-color: #2c3e50;
-	color: #fff;
+    position: fixed;
+    top: 0px;
+    padding-top: 10%;
+    background-color: #2c3e50;
+    color: #fff;
 }
 
 .sidebar-header {
-	text-align: center;
-	margin-bottom: 10px;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 .sidebar-header .title {
-	letter-spacing: 3px;
+    letter-spacing: 3px;
 }
 
 .sidebar-header .title a {
-	text-decoration: none;
-	color: #fff;
+    text-decoration: none;
+    color: #fff;
 }
 
 a.nav-link {
-	padding-bottom: 5px;
-	padding-top: 7px;
-	color: #aaa;
+    padding-bottom: 5px;
+    padding-top: 7px;
+    color: #aaa;
 }
 
 a.nav-link i {
-	font-size: 16px;
+    font-size: 16px;
 }
 
 a.nav-link:hover {
-	color: #777;
+    color: #777;
 }
 
 #bio {
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 11px;
-	margin: 0 auto;
-	margin-bottom: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 11px;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
 #contact-list li .fa,
 article .share .btn {
-	-o-transition: color .2s ease-out, background 1s ease-in;
-	-ms-transition: color .2s ease-out, background 1s ease-in;
-	-moz-transition: color .2s ease-out, background 1s ease-in;
-	-webkit-transition: color .2s ease-out, background 1s ease-in;
-	transition: color .2s ease-out, background 1s ease-in;
+    -o-transition: color .2s ease-out, background 1s ease-in;
+    -ms-transition: color .2s ease-out, background 1s ease-in;
+    -moz-transition: color .2s ease-out, background 1s ease-in;
+    -webkit-transition: color .2s ease-out, background 1s ease-in;
+    transition: color .2s ease-out, background 1s ease-in;
 }
 
 #contact-list li:hover .fa-twitter,
 article .share .twitter:hover {
-	color: #00ACEE;
-	border-color: #00ACEE;
+    color: #00ACEE;
+    border-color: #00ACEE;
 }
 
 #contact-list li:hover .fa-linkedin {
-	color: #1D87BD;
+    color: #1D87BD;
 }
 
 #contact-list li:hover .fa-envelope {
-	color: #E93E30;
+    color: #E93E30;
 }
 
 #contact-list li:hover .fa-pinterest {
-	color: #CC2127;
+    color: #CC2127;
 }
 
 #contact-list li:hover .fa-rss {
-	color: #e74c3c;
+    color: #e74c3c;
 }
 
 article .share .facebook:hover {
-	color: #43609C;
-	border-color: #43609C;
+    color: #43609C;
+    border-color: #43609C;
 }
 
 article .share .gplus:hover {
-	color: #C13929;
-	border-color: #C13929;
+    color: #C13929;
+    border-color: #C13929;
 }
 
 #contact-list-secondary {
-	padding-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 .page-header {
-	color: #e74c3c;
-	text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
+    color: #e74c3c;
+    text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
 }
 
 @media only screen and (min-width: 768px) {
-	.page-header {
-		margin-right: 70px;
-	}
+    .page-header {
+        margin-right: 70px;
+    }
 }
 
 article {
-	margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .article_body {
-	margin-top: 20px;
-	margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .post-date {
-	font-size: 14px;
-	letter-spacing: 3px;
+    font-size: 14px;
+    letter-spacing: 3px;
 }
 
 article {
-	padding: 0 5% 0;
+    padding: 0 5% 0;
 }
 
 article.home div a,
 article.home pre a {
-	color: #2c3e50;
+    color: #2c3e50;
 }
 
 article.home div a:hover,
 article.home pre a:hover {
-	color: #2c3e50;
-	text-decoration: none;
+    color: #2c3e50;
+    text-decoration: none;
 }
 
 article img {
-	max-width: 100%;
+    max-width: 100%;
 }
 
 h1,
@@ -260,7 +275,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 article.home h1,
@@ -269,22 +284,22 @@ article.home h3,
 article.home h4,
 article.home h5,
 article.home h6 {
-	font-family: 'Ubuntu', sans-serif;
-	color: #f2756a;
+    font-family: 'Ubuntu', sans-serif;
+    color: #f2756a;
 }
 
 article.home h1 a,
 article.home h2 a,
 article.home h3 a,
 article.home h4 a {
-	color: #f2756a;
+    color: #f2756a;
 }
 
 article.home h1 a:hover,
 article.home h2 a:hover,
 article.home h3 a:hover,
 article.home h4 a:hover {
-	color: #e74c3c;
+    color: #e74c3c;
 }
 
 .article_body h1 a,
@@ -293,8 +308,8 @@ article.home h4 a:hover {
 .article_body h4 a,
 .article_body h5 a,
 .article_body h6 a {
-	font-family: 'Ubuntu', sans-serif;
-	color: #f2756a;
+    font-family: 'Ubuntu', sans-serif;
+    color: #f2756a;
 }
 
 .article_body h1 a:hover,
@@ -303,60 +318,60 @@ article.home h4 a:hover {
 .article_body h4 a:hover,
 .article_body h5 a:hover,
 .article_body h6 a:hover {
-	color: #e74c3c;
+    color: #e74c3c;
 }
 
 .author .author-image {
-	float: left;
-	margin-right: 20px;
+    float: left;
+    margin-right: 20px;
 }
 
 footer {
-	padding-top: 15px;
-	font-family: 'Ubuntu';
+    padding-top: 15px;
+    font-family: 'Ubuntu';
 }
 
 /* nav-vertical-tabs component */
 .nav-tabs-vertical {
-	border-right: 1px solid #ddd;
+    border-right: 1px solid #ddd;
 }
 
 .nav-tabs-vertical li {
-	margin-right: -1px;
+    margin-right: -1px;
 }
 
 .nav-tabs-vertical>li.active>a,
 .nav-tabs-vertical>li.active>a:hover,
 .nav-tabs-vertical>li.active>a:focus {
-	color: #555;
-	cursor: default;
-	background-color: #fff;
-	border: 1px solid #ddd;
-	border-right-color: transparent;
+    color: #555;
+    cursor: default;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-right-color: transparent;
 }
 
 .nav-tabs-vertical>li>a {
-	line-height: 1.428571429;
-	border: 1px solid transparent;
-	border-radius: 4px 0 0 4px;
+    line-height: 1.428571429;
+    border: 1px solid transparent;
+    border-radius: 4px 0 0 4px;
 }
 
 .badge {
-	background: #F2756A;
+    background: #F2756A;
 }
 
 #nav-menu {
-	position: fixed;
-	top: 45px;
-	right: 45px;
-	z-index: 2000;
+    position: fixed;
+    top: 45px;
+    right: 45px;
+    z-index: 2000;
 }
 
 #nav-menu .dropdown-menu {
-	left: inherit;
-	right: 0px;
+    left: inherit;
+    right: 0px;
 }
 
 ul.dropdown-menu>li>a>i.fa {
-	width: 1.3em;
+    width: 1.3em;
 }
