--- a/_includes/default.html
+++ b/_includes/default.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} | {{ site.title }}</title>
     {% if page.description %}
     <meta name="description" content="{{ page.description }}">
     {% endif %}
