--- a/_includes/default.html
+++ b/_includes/default.html
@@ -117,6 +117,7 @@
 
     <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/NativeShare/NativeShare.js"></script>
     <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/js/app.js"></script>
 </body>
 
