--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,6 +1,6 @@
 <div class="page-header">
     {% if page.figure %}
-    <img src="{{ page.figure }}" style="text-align: center; width: 500px;"></img>
+    <img src="{{ page.figure }}" style="width: 500px;"></img>
     {% endif %}
     <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div>
