把某些样式写成css了，不然用js耗时间

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,14 @@
 @import url(//fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 @import url(//fonts.googleapis.com/css?family=Fira+Code:500&subset=latin,latin-ext);
 
+.sidebar {
+    min-height: 100%;
+}
+
+#contact-list-secondary {
+    display: none;
+}
+
 .page-header {
     text-align: center;
 }
