--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
 @import url(//fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 @import url(//fonts.googleapis.com/css?family=Fira+Code:500&subset=latin,latin-ext);
 
+
+blockquote p {
+    font-size: 14px;
+}
+
 .sidebar {
     min-height: 100%;
 }
