--- a/_includes/giscus.html
+++ b/_includes/giscus.html
@@ -3,7 +3,7 @@
         data-repo-id="R_kgDOLxLb_w"
         data-category="Announcements"
         data-category-id="DIC_kwDOLxLb_84CfPsz"
-        data-mapping="title"
+        data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="1"
