--- a/_includes/default.html
+++ b/_includes/default.html
@@ -66,11 +66,9 @@
             </a>
             {% endif %}
             <script async src="/assets/js/search.js"></script>
-
             <div class="search">
-                <i class="material-icons search-icon search-start">search</i>
+                <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" class="search-input" placeholder="Searching..." />
-                <i class="material-icons search-icon search-clear">clear</i>
                 <div class="search-results z-depth-4"></div>
             </div>
             <a class="navbar-brand" href="{{ site.BASE_PATH }}/">
