--- a/_includes/default.html
+++ b/_includes/default.html
@@ -69,7 +69,7 @@
             <a type="button" class="navbar-toggle nav-link search-open">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </a>
-            <div class="search">
+            <div class="search" style="display: none;">
                 <i class="material-icons search-icon search-start">search</i>
                 <input type="text" class="search-input" placeholder="Searching..." />
                 <i class="material-icons search-icon search-clear">clear</i>
