--- a/_includes/default.html
+++ b/_includes/default.html
@@ -39,6 +39,8 @@
 </head>
 
 <body>
+    {% include search.html %}
+
     <nav class="navbar navbar-default visible-xs" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -69,12 +71,6 @@
             <a type="button" class="navbar-toggle nav-link search-open">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </a>
-            <div class="search" style="display: none;">
-                <i class="material-icons search-icon search-start">search</i>
-                <input type="text" class="search-input" placeholder="Searching..." />
-                <i class="material-icons search-icon search-clear">clear</i>
-                <div class="search-results z-depth-4"></div>
-            </div>
             <a class="navbar-brand" href="{{ site.BASE_PATH }}/">
                 <img src="{{site.author.icon}}" style="height:35px;" class="img-circle" />
                 {{ site.title }}
