--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,3 +1,4 @@
+<div class="search-bg" style="display:none; position: fixed;width: 100%;height:100%;background-color: rgba(0, 0, 0, .5);z-index: 999;"></div>
 <div class="search">
     <i class="material-icons search-icon search-start">search</i>
     <input type="text" class="search-input" placeholder="Searching..." />
