--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,5 +1,5 @@
 <div class="search-bg" style="display:none; position: fixed;width: 100%;height:100%;background-color: rgba(0, 0, 0, .5);z-index: 999;"></div>
 <div class="search">
-    <input type="text" class="search-input" placeholder="Searching..." />
+    <input type="text" class="search-input form-control" placeholder="Searching..." />
     <div class="search-results z-depth-4"></div>
 </div>
