--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -58,6 +58,11 @@
                 <i class="fa-solid fa-rss"></i>
             </a>
         </li>
+        <li>
+            <a class="btn btn-default btn-sm search-open">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </a>
+        </li>
     </ul>
 </div>
 <!-- sidebar.html end -->
