--- a/_includes/default.html
+++ b/_includes/default.html
@@ -79,7 +79,7 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
             </a>
             <a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-                <img src="{{site.author.icon}}" style="height:35px;" class="img-circle" />
+                <!--<img src="{{site.author.icon}}" style="height:35px;" class="img-circle" />-->
                 {{ site.title }}
             </a>
         </div>
