--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <!-- sidebar.html -->
 <header class="sidebar-header" role="banner">
-    <a href="{{ site.BASE_PATH }}/">
+    <!--<a href="{{ site.BASE_PATH }}/">
         <img src="{{site.author.icon}}" style="height:50px;" class="img-circle" />
-    </a>
+    </a>-->
     <h3 class="title">
         <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
     </h3>
